[package]
name = "bacnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bacnet-sys = { path = "../bacnet-sys" }
lazy_static = "1"
log = "0"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
pretty_env_logger = "0"
structopt = "0"
